# greedy-search

./: .gitignore  pyproject.toml
test/: test_greedy_search.py
