[project]
name = "greedy-search"
version = "0.1.0"
description = "set covering problem"
authors = [
    {name = "dfleta", email = "gelpiorama@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
]

[dependency-groups]
lint = [
    "ruff>=0.9.9",
]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
]
